--- a/r4babs1/week-9/study_before_workshop.qmd
+++ b/r4babs1/week-9/study_before_workshop.qmd
@@ -3,5 +3,6 @@ title: "Week 9: Summarising data in with several variables and the role of varia
 subtitle: "Independent Study to prepare for workshop"
 ---
 
-1.  Use this week's independent study time to make sure you've completed all the work in weeks 6 to 8. This will make you well prepared for summarising dataframes and creating plots which you will do the [Week 9 workshop](workshop.html).
+1.  📖 Read [Working with data in RStudio](https://3mmarand.github.io/comp4biosci/working_with_data_rstudio.html). The first part of this chapter is about data import which we covered in the last workshop. You may be able to skip that part or you may find it useful to revise. The section on [Summarising data](https://3mmarand.github.io/comp4biosci/working_with_data_rstudio.html#summarising-data) will be mainly new.
+
 
