--- a/r4babs2/week-2/overview.qmd
+++ b/r4babs2/week-2/overview.qmd
@@ -2,7 +2,7 @@
 title: "Week 2: Introduction to statistical models: Single linear regression"
 ---
 
-This week you will be introduced to the idea of a statistical "model" in general and to general linear model in particular. Out first general linear model will be single linear regression which puts a line of best fit through data so the response can be predicted from the explanatory variable. We will consider the two "parameters" estimated by the model (the slope and the intercept) and whether these differ from zero
+This week you will be introduced to the idea of a statistical "model" in general and to general linear model in particular. Our first general linear model will be single linear regression which puts a line of best fit through data so the response can be predicted from the explanatory variable. We will consider the two "parameters" estimated by the model (the slope and the intercept) and whether these differ from zero
 
 ### Learning objectives
 
