--- a/r4babs2/week-3/study_before_workshop.qmd
+++ b/r4babs2/week-3/study_before_workshop.qmd
@@ -5,10 +5,7 @@ subtitle: "Independent Study to prepare for workshop"
 
 1.  Prepare
 
-    i.  **Either** 📖 Read [xxxxx](https://3mmarand.github.io/comp4biosci/xx.html) in **OR** 📹 Watch
-
-    {{< video https://www.youtube.com/watch?xx >}}
-
+    i.  📖 Read [Two-Sample tests](https://3mmarand.github.io/comp4biosci/two_sample_tests.html) 
 
 
 
