--- a/r4babs2/week-3/workshop.qmd
+++ b/r4babs2/week-3/workshop.qmd
@@ -13,11 +13,11 @@ library(kableExtra)
 
 # Introduction
 
-![](images/xxx.png){fig-alt="xxxxx" width="1000"}
+![Allison Horst cartoon: How much I think I know about R"](images/how-much-i-know.png){fig-alt="Illustrated line plot of 'How much I think I know about R' on the y-axis, and 'Time' on the x-axis. Along the line are emoji-style faces, showing the non-linear progression of R knowledge over time. At first, a nervous face becomes a happy face early on in learning, then a "grimace" face at an intermediate peak before a steep decline (with an exhausted face at the local minimum). Then, a determined face charges back up a hill, reaching another peak with a 'mind blown' face and text annotation 'join R community on twitter' followed by another decline, but this time the faces look happy even though their 'How much I think I know about R' value is declining." width="800"}
 
 ## Session overview
 
-In this session you will 
+In this workshop you will get practice in choosing between, performing, and presenting the results of, two-sample tests and their non-parametric equivalents in R.
 
 ## Philosophy
 
@@ -56,9 +56,383 @@ These four symbols are used at the beginning of each instruction so you know whe
 
 ![](images/do_in_R.png) Make a new script then save it with a name like `two-sample-tests.R` to carry out the rest of the work.
 
-![](images/do_in_R.png) Add a comment to the script: `# The logic of hypothesis testing and confidence intervals`
+![](images/do_in_R.png) Add a comment to the script: `# Two-sample tests`   and load the **`tidyverse`** [@tidyverse] package
 
-# Exercises
+# Exercises 
+
+## Adiponectin secretion
+
+Adiponectin is exclusively secreted from adipose tissue and modulates a number of metabolic processes. Nicotinic acid can affect adiponectin secretion. 3T3-L1 adipocytes were treated with nicotinic acid or with a control treatment and adiponectin concentration (pg/mL) measured. The data are in [adipocytes.txt](data-raw/adipocytes.txt). Each row represents an independent sample of adipocytes and the first column gives the concentration adiponectin and the second column indicates whether they were treated with nicotinic acid or not. 
+
+![](images/do_on_your_computer.png) Save a copy of [adipocytes.txt](data-raw/adipocytes.txt) to `data-raw`
+
+![](images/do_in_R.png) Read in the data and check the structure. I used the name `adip` for the dataframe/tibble.
+
+```{r}
+#| include: false  
+
+#| #---CODING ANSWER---
+adip  <-  read_table("data-raw/adipocytes.txt")
+str(adip)
+```
+
+We have a tibble containing two variables: `adiponectin` is the response and is continuous and `treatment` is explanatory. `treatment` is categorical with two levels (groups). The first task is visualise the data to get an overview. For continuous response variables with categorical explanatory variables you could use `geom_point()`, `geom_boxplot()` or a variety of other geoms. I often use `geom_violin()` which allows us to see the distribution  - the violin is fatter where there are more data points.
+
+
+
+![](images/do_in_R.png) Do a quick plot of the data:
+```{r}
+ggplot(data = adip, aes(x = treatment, y = adiponectin)) +
+  geom_violin()
+```
+
+
+### Summarising the data
+
+Summarising the data for each treatment group is the next sensible step. The most useful summary statistics are the means, standard deviations, sample sizes and standard errors.
+
+![](images/do_in_R.png) Create a data frame called `adip_summary` that contains the means, standard deviations, sample sizes and standard errors for the control and nicotinic acid treated samples. You may need to the [Summarise](../../r4babs1/week-9/workshop.html#summarise) from the Week 9 workshop of BABS1 [@rand2023]
+
+```{r}
+#| include: false  
+
+#| #---CODING ANSWER---
+
+adip_summary <- adip %>%
+  group_by(treatment) %>%
+  summarise(mean = mean(adiponectin),
+            std = sd(adiponectin),
+            n = length(adiponectin),
+            se = std/sqrt(n))
+
+```
+
+You should get the following numbers:
+
+```{r}
+# | echo: false
+knitr::kable(adip_summary) %>% 
+  kableExtra::kable_styling()
+```
+
+
+### Selecting a test
+
+![](images/answer.png) Do you think this is a paired-sample test or two-sample test?
+
+<!-- #---THINKING ANSWER---  -->
+
+<!-- Two-sample - the samples are either control or nicotinic acid treated, not both.  -->
+<!-- There is no link between the first control value and the first nicotinic acid  -->
+<!-- value. The two samples are independent and it is a two-sample -->
+
+
+
+### Applying, interpreting and reporting
+
+![](images/do_in_R.png) Create a two-sample model like this:
+
+```{r adipt}
+mod <- lm(data = adip,
+          adiponectin ~ treatment)
+```
+
+
+![](images/do_in_R.png) Examine the model with:
+
+```{r adipt}
+summary(mod)
+```
+
+
+
+![](images/answer.png) What do you conclude from the test? Write your conclusion in a form suitable for a report. 
+
+<!-- #---THINKING ANSWER---  -->
+
+<!-- Adipoctyes treated with nicotinic acid (mean +/- s.e.: 7.51 +/- 1.10 pg/mL)  -->
+<!-- secrete significantly more adiponectin than controls (5.55  +/- 0.12 pg/mL)  -->
+<!-- (t = 3.27; d.f. = 28; p = 0.003). -->
+
+
+
+
+### Check assumptions
+
+The assumptions of the general linear model are that the residuals – the difference between predicted value (i.e., the group mean) and observed values - are normally distributed and have homogeneous variance. To check these we need to calculate the residuals and we can do examine the `mod$residuals` variable. You may want to refer to [Checking assumptions](../week-2/workshop.html#checking-assumptions) in Week 2's workshop.
+
+![](images/do_in_R.png)  Plot the model residuals against the fitted values.
+```{r}
+#| include: false
+
+#---CODING ANSWER-
+
+plot(mod, which = 1)
+```
+
+
+![](images/answer.png)  What to you conclude?
+
+<!-- #---THINKING ANSWER--- -->
+
+<!-- The residuals look 'homogeneously' distributed. That is, the variance is the same  -->
+<!-- for the two groups  -->
+
+To examine normality of the model residuals we can plot them as a histogram and do a normality test on them.
+
+![](images/do_in_R.png)  Plot a histogram of the residuals.
+```{r}
+#| include: false
+
+#---CODING ANSWER-
+
+ggplot(mapping = aes(x = mod$residuals)) + 
+  geom_histogram(bins = 10)
+```
+
+
+
+![](images/do_in_R.png) Use the `shapiro.test()` to test the normality of the model residuals
+```{r}
+#| include: false
+
+#---CODING ANSWER-
+#
+shapiro.test(mod$residuals)
+```
+
+![](images/answer.png)  What to you conclude?
+
+<!-- #---THINKING ANSWER--- -->
+
+<!-- the residuals appear roughly normally distributed.  -->
+<!-- The histogram is symmetrical and the shapiro test is NS. -->
+
+<!-- Overall, it seems the assumptions are met -->
+
+### Illustrating
+
+![](images/do_in_R.png) Create a figure like the one below. You may need to the [Visualise](../../r4babs1/week-9/workshop.html#visualise) from the Week 9 workshop of BABS1 [@rand2023]
+
+```{r}
+#| echo: false
+
+#---CODING ANSWER---
+ggplot() +
+  geom_point(data = adip, aes(x = treatment, y = adiponectin),
+             position = position_jitter(width = 0.1, height = 0),
+             colour = "gray50") +
+  geom_errorbar(data = adip_summary, 
+                aes(x = treatment, ymin = mean - se, ymax = mean + se),
+                width = 0.3) +
+  geom_errorbar(data = adip_summary, 
+                aes(x = treatment, ymin = mean, ymax = mean),
+                width = 0.2) +
+  scale_y_continuous(name = "Adiponectin (pg/mL)", 
+                     limits = c(0, 12), 
+                     expand = c(0, 0)) +
+  scale_x_discrete(name = "Treatment", 
+                   labels = c("Control", "Nicotinic acid")) +
+  theme_classic()
+
+```
+
+# HERE
+
+We now need to annotate the figure with the results from the test.
+
+
+
+```{r}
+ggplot() +
+  geom_point(data = adip, aes(x = treatment, y = adiponectin),
+             position = position_jitter(width = 0.1, height = 0),
+             colour = "gray50") +
+  geom_errorbar(data = adip_summary, 
+                aes(x = treatment, ymin = mean - se, ymax = mean + se),
+                width = 0.3) +
+  geom_errorbar(data = adip_summary, 
+                aes(x = treatment, ymin = mean, ymax = mean),
+                width = 0.2) +
+  scale_y_continuous(name = "Adiponectin (pg/mL)", 
+                     limits = c(0, 12), 
+                     expand = c(0, 0)) +
+  scale_x_discrete(name = "Treatment", 
+                   labels = c("Control", "Nicotinic acid")) +
+  annotate("segment", x = 1, xend = 2, 
+           y = 11.3, yend = 11.3,
+           colour = "black") +
+  annotate("segment", x = 2, xend = 2, 
+           y = 11.3, yend = 11,
+           colour = "black") +
+  annotate("segment", x = 1, xend = 1, 
+           y = 11.3, yend = 11,
+           colour = "black") +
+  annotate("text", x = 1.5,  y = 11.7, 
+           label = expression(italic(p)~"= 0.003")) +
+  theme_classic()
+```  
+
+![](images/do_in_R.png) Save your figure to your figures folder.
+```{r}
+#| include: false
+
+#---CODING ANSWER---
+
+# Assign the figure to a variable
+fig1 <- ggplot() +
+  geom_point(data = adip, aes(x = treatment, y = adiponectin),
+             position = position_jitter(width = 0.1, height = 0),
+             colour = "gray50") +
+  geom_errorbar(data = adip_summary, 
+                aes(x = treatment, ymin = mean - se, ymax = mean + se),
+                width = 0.3) +
+  geom_errorbar(data = adip_summary, 
+                aes(x = treatment, ymin = mean, ymax = mean),
+                width = 0.2) +
+  scale_y_continuous(name = "Adiponectin (pg/mL)", 
+                     limits = c(0, 12), 
+                     expand = c(0, 0)) +
+  scale_x_discrete(name = "Treatment", 
+                   labels = c("Control", "Nicotinic acid")) +
+  annotate("segment", x = 1, xend = 2, 
+           y = 11.3, yend = 11.3,
+           colour = "black") +
+  annotate("segment", x = 2, xend = 2, 
+           y = 11.3, yend = 11,
+           colour = "black") +
+  annotate("segment", x = 1, xend = 1, 
+           y = 11.3, yend = 11,
+           colour = "black") +
+  annotate("text", x = 1.5,  y = 11.7, 
+           label = expression(italic(p)~"= 0.003")) +
+  theme_classic()
+
+```
+
+
+```{r}
+#| include: false
+
+#---CODING ANSWER---
+
+# save figure to figures/plant-growth.png
+ggsave("figures/adipo.png",
+       plot = fig1,
+       width = 3.5,
+       height = 3.5,
+       units = "in",
+       dpi = 300)
+
+```
+
+## Grouse Parasites
+
+These data come from a sample of grouse shot in Scotland. The grouse livers were dissected and the number of individuals of a parasitic nematode were counted for two estates 'Gordon' and 'Moss'. We want to know if the two estates have different infection rates.
+ 
+
+### Selecting
+
+![](images/answer.png) Using your common sense, do these data look normally distributed? 
+<!--
+#---THINKING ANSWER---
+No and little need to test/plot - they're counts, skewed and have unequal variances
+-->
+
+![](images/answer.png) What test do you suggest?
+<!--
+#---THINKING ANSWER---
+two-sample Wilcoxon (unpaired) AKA Mann-Whitney
+-->
+
+### Applying, interpreting and reporting
+
+![](images/do_in_R.png) Summarise the data by finding the median of each group:
+```{r include=FALSE}
+#| include: false  #---CODING ANSWER---
+grouse %>% 
+  group_by(estate) %>% 
+  summarise(median(nematodes))
+```
+
+
+![](images/do_in_R.png)  Carry out a two-sample Wilcoxon test (also known as a Mann-Whitney):
+```{r grousewilcox}
+wilcox.test(data = grouse, nematodes ~ estate)
+```
+![](images/answer.png) What do you conclude from the test? Write your conclusion in a form suitable for a report. 
+<!--
+#---THINKING ANSWER---
+Grouse on Gordon had significantly more nematodes (median = 13.5) than those on Moss (median = 5) (_W_ = 78; n1 = 10, n2 = 10; _p_ = 0.03546).
+-->
+
+### Illustrating
+
+A box plot is a usually good choice for illustrating a two-sample Wilcoxon test because it shows the median and interquartile range.
+
+![](images/do_in_R.png) We can create a simple boxplot with:  
+```{r grousefig, fig.width = 4, fig.height = 4}
+ggplot(data = grouse, aes(x = estate, y = nematodes) ) +
+  geom_boxplot() 
+```
+
+![](images/do_in_R.png) Format the figure so it is more suitable for a report.  
+```{r include = FALSE, fig.width = 4, fig.height = 4}
+#| include: false  #---CODING ANSWER---
+ggplot(data = grouse, aes(x = estate, y = nematodes) ) +
+  geom_boxplot() + 
+  scale_x_discrete(name = "Estate", labels = c("Gordon", "Moss")) +
+  scale_y_continuous(name = "Number of nematodes") +
+  theme_classic()
+```
+
+## Gene Expression
+
+Researchers are interested in the expression levels of a particular set of 35 _E.coli_ genes in response to heat stress. They measure the expression of the genes at 37 and 42 degrees C (labelled low and high temperature). These samples are **not** independent because we might expect there to be a relationship between expression at 37 and 42 degrees within a gene.
+
+### Selecting
+![](images/answer.png) What is the null hypothesis?
+<!--
+#---THINKING ANSWER---
+expression is not affected by temperature / for each gene, the expression at the higher t   = expression at the lower t
+-->
+
+![](images/do_on_your_computer.png) Save a copy of [coliexp.txt](data-raw/coliexp.txt)
+
+![](images/do_in_R.png) Read the data in
+```{r geneimport, echo = FALSE}
+#| include: false  #---CODING ANSWER---
+# I have my data files in a folder called data
+coliexp  <-  read_table("data-raw/coliexp.txt")
+```
+
+![](images/answer.png) What is the appropriate parametric test?
+<!--
+#---THINKING ANSWER---
+the appropriate parametric test is the paired sample t 
+-->
+
+### Applying, interpreting and reporting
+
+![](images/do_in_R.png) Now carry out a paired-sample *t*-test. 
+```{r genepairedt}
+t.test(data = coliexp, expression ~ temperature, paired = T)
+
+```
+
+![](images/answer.png) State your conclusion from the test in a form suitable for including in a report. Make sure you give the direction of any significant effect.
+<!--
+#---THINKING ANSWER---
+The expression of individual gens is signifcantly higher are high temperatures than low temperatures (*t* = 3.20, _d.f._ = 34, _p_ = 0.0029).
+-->
+
+
+# Look after future you!
+
+![](images/future_you.png){fig-alt="xxx" width="500"}
+
+The code required to summarise, test, and plot data for any two-sample *t*-test AND for any for any one-way ANOVA is **exactly the same** except for the names of the dataframe, variables and the axis labels and limits.
+Take some time to comment it. Consider making a script called ttest.R or similar with all the code and information you need to reuse it.
 
 
 
@@ -66,7 +440,7 @@ You're finished!
 
 # 🥳 Well Done! 🎉
 
-![](images/xxx.png){fig-alt="xxx" width="1000"}
+
 
 # Independent study following the workshop
 
@@ -76,8 +450,8 @@ You're finished!
 
 These contain all the code needed in the workshop even where it is not visible on the webpage.
 
-The [workshop.qmd](workshop.qmd) file is the file I use to compile the practical. Qmd stands for Quarto markdown. It allows code and ordinary text to be interweaved to produce well-formatted reports including webpages. Right-click on the link and choose Save-As to download. You will be able to open the Rmd file in RStudio. Alternatively, [View in Browser](https://github.com/3mmaRand/R4BABS/blob/main/r4babs2/week-3/workshop.qmd).Coding and thinking answers are marked with `#---CODING ANSWER---` and `#---THINKING ANSWER---`
+The [workshop.qmd](workshop.qmd) file is the file I use to compile the practical. Qmd stands for Quarto markdown. It allows code and ordinary text to be interweaved to produce well-formatted reports including webpages. Right-click on the link and choose Save-As to download. You will be able to open the Rmd file in RStudio. Alternatively, [View in Browser](https://github.com/3mmaRand/R4BABS/blob/main/r4babs2/week-3/workshop.qmd).Coding and thinking answers are marked with `#| include: false  #---CODING ANSWER---` and `#---THINKING ANSWER---`
 
-Pages made with Quarto [@allaire2022]
+Pages made with Quarto [@allaire2022], [@knitr], [@kableExtra]
 
 # References
