--- a/references.bib
+++ b/references.bib
@@ -82,3 +82,17 @@
 	date = {2023-05},
 	url = {https://3mmarand.github.io/R4BABS/}
 }
+
+@article{wickham2014,
+	title = {Tidy Data},
+	author = {Wickham, Hadley},
+	year = {2014},
+	month = {09},
+	date = {2014-09-12},
+	journal = {Journal of Statistical Software},
+	pages = {1--23},
+	volume = {59},
+	doi = {10.18637/jss.v059.i10},
+	url = {https://doi.org/10.18637/jss.v059.i10},
+	langid = {en}
+}
