--- a/r4babs2/week-3/study_after_workshop.qmd
+++ b/r4babs2/week-3/study_after_workshop.qmd
@@ -18,75 +18,105 @@ library(tidyverse)
 
 # Exercises
 
-1.  💻 Plant Biotech. Some plant biotechnologists are trying to increase the quantity of omega 3 fatty acids in Cannabis sativa. They have developed a genetically modified line using genes from *Linum usitatissimum* (linseed). They grow 50 wild type and fifty modified plants to maturity, collect the seeds and determine the amount of omega 3 fatty acids. The data are in [csativa.txt](data-raw/). Do you think their modification has been successful?
+1.  💻 Plant Biotech. Some plant biotechnologists are trying to increase the quantity of omega 3 fatty acids in Cannabis sativa. They have developed a genetically modified line using genes from *Linum usitatissimum* (linseed). They grow 50 wild type and fifty modified plants to maturity, collect the seeds and determine the amount of omega 3 fatty acids. The data are in [csativa.txt](data-raw/csativa.txt). Do you think their modification has been successful?
 
 
 ```{r}
 #| output: false
 
-# Unedited c&P
-
-#---THINKING AND CODING ANSWER---
-csativa  <-  read_table("../data/csativa.txt")
+csativa  <-  read_table("data-raw/csativa.txt")
 str(csativa)
 
 # First realise that this is a two sample test. You have two independent samples
 #  - there are a total of 100 different plants and the values in one 
 #  group have no relationship to the values in the other.
+```
+
+```{r}
+#| output: false
 
 # create a rough plot of the data  
 ggplot(data = csativa, aes(x = plant, y = omega)) +
   geom_violin()
-# note the modified plants seem to have lowere omega!
+# note the modified plants seem to have lower omega!
+```
+
+```{r}
+#| output: false
 
 # create a summary of the data
-csativasum <- csativa %>%
+csativa_summary <- csativa %>%
   group_by(plant) %>%
   summarise(mean = mean(omega),
             std = sd(omega),
             n = length(omega),
             se = std/sqrt(n))
+```
 
-# The data seem to be continuous so it is likely that a t-test will be fine
-t.test(data = csativa, omega ~ plant, var.equal = TRUE)
+```{r}
+#| output: false
+
+# The data seem to be continuous so it is likely that a parametric test will be fine
+# we will check the other assumptions after we have run the lm
+
+# build the statistical model
+mod <- lm(data = csativa, omega ~ plant)
+
+
+# examine it
+summary(mod)
 # So there is a significant difference but you need to make sure you know the direction!
+# Wild plants have a significantly higher omega 3 content (mean +/- s.e =  56.41 +/- 1.11) 
+# than modified plants (49.46 +/- 0.82)(t = 5.03; d.f. = 98; p < 0.0001).
+```
+
+```{r}
+#| output: false
 
 # let's check the assumptions
-# add the group means to the data
-csativa <- merge(csativa, csativasum[,1:2], by = "plant")
-# add the residuals
-csativa <- csativa %>%
-  mutate(residual = omega - mean)
+plot(mod, which = 1) 
+# we're looking for the variance in the residuals to be the same in both groups.
+# This looks OK. Maybe a bit higher in the wild plants (with the higher mean)
+ 
+hist(mod$residuals)
+shapiro.test(mod$residuals)
+# On balance the use of lm() is probably justifiable  The variance isn't quite equal 
+# and the histogram looks a bit off normal but the normality test is NS and the 
+# effect (in the figure) is clear.
+```
 
-# plot
-ggplot(data = csativa,
-       aes(x = mean, y = residual)) +
-  geom_point()
-# normality test
-shapiro.test(csativa$residual)
-
-# One could argue that the variance is greater in one group. In which case you could run a Welch's t-test
-t.test(data = csativa, omega ~ plant)
-
-# You would write it up like this:
-# Wild plants have a significantly higher omega 3 content (($\bar{x} \pm s.e.$ =  56.41 $\pm$ 1.11) than modified plants (49.46 $\pm$ 0.82)(Welch's t-test: t = 5.03; _d.f._ = 90.36; _n1_ =  50, _n2_ = 50; _p_ < 0.001).
+```{r}
+#| output: false
 
 # A figure 
-ggplot() +
+fig1 <- ggplot() +
   geom_point(data = csativa, aes(x = plant, y = omega),
              position = position_jitter(width = 0.1, height = 0),
              colour = "gray50") +
-  geom_errorbar(data = csativasum, 
+  geom_errorbar(data = csativa_summary, 
                 aes(x = plant, ymin = mean - se, ymax = mean + se),
                 width = 0.3) +
-  geom_errorbar(data = csativasum, 
+  geom_errorbar(data = csativa_summary, 
                 aes(x = plant, ymin = mean, ymax = mean),
                 width = 0.2) +
   scale_x_discrete(name = "Plant type", labels = c("GMO", "WT")) +
   scale_y_continuous(name = "Amount of Omega 3 (units)",
                      expand = c(0, 0),
-                     limits = c(0, 80)) +
+                     limits = c(0, 90)) +
+    annotate("segment", x = 1, xend = 2, 
+           y = 80, yend = 80,
+           colour = "black") +
+  annotate("text", x = 1.5,  y = 85, 
+           label = expression(italic(p)~"< 0.001")) +
   theme_classic()
+
+# save figure to figures/csativa.png
+ggsave("figures/csativa.png",
+       plot = fig1,
+       width = 3.5,
+       height = 3.5,
+       units = "in",
+       dpi = 300)
 
 ```
 
