--- a/r4babs2/week-3/workshop.qmd
+++ b/r4babs2/week-3/workshop.qmd
@@ -13,7 +13,7 @@ library(kableExtra)
 
 # Introduction
 
-![Allison Horst cartoon: How much I think I know about R"](images/how-much-i-know.png){fig-alt="Illustrated line plot of 'How much I think I know about R' on the y-axis, and 'Time' on the x-axis. Along the line are emoji-style faces, showing the non-linear progression of R knowledge over time. At first, a nervous face becomes a happy face early on in learning, then a "grimace" face at an intermediate peak before a steep decline (with an exhausted face at the local minimum). Then, a determined face charges back up a hill, reaching another peak with a 'mind blown' face and text annotation 'join R community on twitter' followed by another decline, but this time the faces look happy even though their 'How much I think I know about R' value is declining." width="800"}
+![Allison Horst cartoon: How much I think I know about R"](images/how-much-i-know.png){fig-alt="Illustrated line plot of 'How much I think I know about R' on the y-axis, and 'Time' on the x-axis. Along the line are emoji-style faces, showing the non-linear progression of R knowledge over time. At first, a nervous face becomes a happy face early on in learning, then a grimace face at an intermediate peak before a steep decline (with an exhausted face at the local minimum). Then, a determined face charges back up a hill, reaching another peak with a mind-blown face and text annotation 'join R community on twitter' followed by another decline, but this time the faces look happy even though their 'How much I think I know about R' value is declining." width="800"}
 
 ## Session overview
 
@@ -240,8 +240,20 @@ ggplot() +
 
 We now need to annotate the figure with the results from the statistical test. This most commonly done with a line linking the means being compared and the *p*-value. The `annotate()` function can be used to draw the line and then to add the value. The line is a `segment` and the *p*-value is a `text`.
 
-![](images/do_in_R.png) Add annotation to the figure:
+![](images/do_in_R.png) Add annotation to the figure by adding:
+```r
+...... +
+  annotate("segment", x = 1, xend = 2, 
+           y = 11.3, yend = 11.3,
+           colour = "black") +
+  annotate("text", x = 1.5,  y = 11.7, 
+           label = expression(italic(p)~"= 0.003")) +
+  theme_classic()
+```  
+
 ```{r}
+#| echo: false
+
 ggplot() +
   geom_point(data = adip, aes(x = treatment, y = adiponectin),
              position = position_jitter(width = 0.1, height = 0),
@@ -263,7 +275,10 @@ ggplot() +
   annotate("text", x = 1.5,  y = 11.7, 
            label = expression(italic(p)~"= 0.003")) +
   theme_classic()
-```  
+```
+
+
+
 
 For the segment, `annotate()` needs the *x* and *y* coordinates for the start and the finish of the line.
 
@@ -493,10 +508,9 @@ summary(mod)
 
 # Look after future you!
 
-![](images/future_you.png){fig-alt="xxx" width="500"}
+The code required to summarise, test, and plot data for any two-sample test AND for any for any one-way ANOVA is **exactly the same** except for the names of the dataframe, variables and the axis labels and limits. Take some time to comment it your code so that you can make use of it next week.
 
-The code required to summarise, test, and plot data for any two-sample test AND for any for any one-way ANOVA is **exactly the same** except for the names of the dataframe, variables and the axis labels and limits. Take some time to comment it your code so that you can make use of it next week. 
-
+![](images/future_you.png){fig-alt="xxx" width="300"}
 
 
 You're finished!
