switching title and subtitle to make clearer for the VLE - week 6 as test

--- a/r4babs1/week-6/workshop.qmd
+++ b/r4babs1/week-6/workshop.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Week 6: Understanding file systems"
-subtitle: "Workshop"
+title: "Workshop"
+subtitle: "Week 6: Understanding file systems"
 toc: true
 toc-location: right
 ---
