--- a/r4babs1/week-6/study_after_workshop.qmd
+++ b/r4babs1/week-6/study_after_workshop.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Week 6: Understanding file systems"
-subtitle: "Independent Study to consolidate this week"
+title: "Independent Study to consolidate this week"
+subtitle: "Week 6: Understanding file systems"
 ---
 
 
