switch titles and subtitles for all of babs1

--- a/r4babs1/week-7/study_after_workshop.qmd
+++ b/r4babs1/week-7/study_after_workshop.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Week 7: Introduction to R, RStudio and project organisation"
-subtitle: "Independent Study to consolidate this week"
+title: "Independent Study to consolidate this week"
+subtitle: "Week 7: Introduction to R, RStudio and project organisation"
 format:
   html:
     code-fold: true
