--- a/r4babs1/week-7/study_before_workshop.qmd
+++ b/r4babs1/week-7/study_before_workshop.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Week 7: Introduction to R, RStudio and project organisation"
-subtitle: "Independent Study to prepare for workshop"
+title: "Independent Study to prepare for workshop"
+subtitle: "Week 7: Introduction to R, RStudio and project organisation"
 ---
 
 1.  **Either** 
