--- a/r4babs1/week-8/study_after_workshop.qmd
+++ b/r4babs1/week-8/study_after_workshop.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Week 8: Types of variable, the normal distribution and summarising data"
-subtitle: "Independent Study to consolidate this week"
+title: "Independent Study to consolidate this week"
+subtitle: "Week 8: Types of variable, the normal distribution and summarising data"
 format:
   html:
     code-fold: true
