--- a/r4babs2/week-1/workshop.qmd
+++ b/r4babs2/week-1/workshop.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Week 1: The logic of hypothesis testing and confidence intervals"
-subtitle: "Workshop"
+title: "Workshop"
+subtitle: "Week 1: The logic of hypothesis testing and confidence intervals"
 toc: true
 toc-location: right
 ---
