--- a/r4babs2/week-3/workshop.qmd
+++ b/r4babs2/week-3/workshop.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Week 3: Two-sample tests"
-subtitle: "Workshop"
+title: "Workshop"
+subtitle: "Week 3: Two-sample tests"
 toc: true
 toc-location: right
 ---
