--- a/r4babs2/week-5/study_after_workshop.qmd
+++ b/r4babs2/week-5/study_after_workshop.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Week 5: Two-way ANOVA"
-subtitle: "Independent Study to consolidate this week"
+title: "Independent Study to consolidate this week"
+subtitle: "Week 5: Two-way ANOVA"
 format:
   html:
     code-fold: true
