--- a/r4babs2/week-5/study_before_workshop.qmd
+++ b/r4babs2/week-5/study_before_workshop.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Week 5: Two-way ANOVA"
-subtitle: "Independent Study to prepare for workshop"
+title: "Independent Study to prepare for workshop"
+subtitle: "Week 5: Two-way ANOVA"
 ---
 
 1.  Prepare
