--- a/r4babs2/week-5/workshop.qmd
+++ b/r4babs2/week-5/workshop.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Week 5: Two-way ANOVA"
-subtitle: "Workshop"
+title: "Workshop"
+subtitle: "Week 5: Two-way ANOVA"
 toc: true
 toc-location: right
 ---
