--- a/r4babs2/week-6/study_before_workshop.qmd
+++ b/r4babs2/week-6/study_before_workshop.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Week 6: Chi-squared tests and correlation"
-subtitle: "Independent Study to prepare for workshop"
+title: "Independent Study to prepare for workshop"
+subtitle: "Week 6: Chi-squared tests and correlation"
 ---
 
 1.  Prepare
