--- a/r4babs2/week-1/study_after_workshop.qmd
+++ b/r4babs2/week-1/study_after_workshop.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Week 1: The logic of hypothesis testing and confidence intervals"
-subtitle: "Independent Study to consolidate this week"
+title: "Independent Study to consolidate this week"
+subtitle: "Week 1: The logic of hypothesis testing and confidence intervals"
 format:
   html:
     code-fold: true
