--- a/r4babs2/week-3/study_after_workshop.qmd
+++ b/r4babs2/week-3/study_after_workshop.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Week 3: Two-sample tests"
-subtitle: "Independent Study to consolidate this week"
+title: "Independent Study to consolidate this week"
+subtitle: "Week 3: Two-sample tests"
 format:
   html:
     code-fold: true
