--- a/r4babs2/week-4/study_after_workshop.qmd
+++ b/r4babs2/week-4/study_after_workshop.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Week 4: One-way ANOVA and Kruskal-Wallis"
-subtitle: "Independent Study to consolidate this week"
+title: "Independent Study to consolidate this week"
+subtitle: "Week 4: One-way ANOVA and Kruskal-Wallis"
 format:
   html:
     code-fold: true
