--- a/r4babs2/week-4/study_before_workshop.qmd
+++ b/r4babs2/week-4/study_before_workshop.qmd
@@ -5,10 +5,7 @@ subtitle: "Week 4: One-way ANOVA and Kruskal-Wallis"
 
 1.  Prepare
 
-    i.  **Either** 📖 Read [xxxxx](https://3mmarand.github.io/comp4biosci/xx.html) in **OR** 📹 Watch
-
-    {{< video https://www.youtube.com/watch?xx >}}
-
+    i.  📖 Read [One-way ANOVA and Kruskal-Wallis](https://3mmarand.github.io/comp4biosci/one_way_anova_and_kw.html) 
 
 
 
